<resources>
    <string name="app_name">GamePlus2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="alumnos">Alumnos - carnet</string>
    <string name="alumno1">Marvin Cortez 2520492015</string>
    <string name="alumno2">Julio Olivares 2520882015 </string>


    <string name="menu_home">Inicio</string>
    <string name="categorias">Categorias</string>
    <string name="videojuegos">Video Juegos</string>
    <string name="favoritos">Favoritos</string>
    <string name="ventas">Mas Esperados</string>
    <string name="peores">Los Peores</string>
    <string name="contacto">Contactanos</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Datos_Personales">Datos_Personales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_mas_esperados">imagen mas esperados</string>

    <string name="alumnos_gh">Alumnos:</string>
    <string name="tecnicas_de_calidad_de_software">Tecnicas de calidad de software</string>
    <string name="julio_roberto_olivares_perez_25_2088_2015">Julio Roberto Olivares Perez 25-2088-2015</string>
    <string name="marvin_josue_cortez_rodas_25_2049_2015">Marvin Josue Cortez Rodas 25-2049-2015</string>
    <string name="video_juegos">Video Juegos</string>
    <string name="todo">TODO</string>
    <string name="universidad_tecnologica_de_el_salvador">Universidad Tecnologica de El Salvador</string>
    <string name="favorito">favorito</string>

    <string-array name="telefonos">
        <item>+503 2225-6934</item>
        <item>+503 2225-6935</item>
        <item>+503 2225-6936</item>
        <item>+503 2225-6937</item>
        <item>+503 2225-6938</item>
        <item>+503 2225-6939</item>
        <item>+503 2225-6930</item>
        <item>+503 2225-6932</item>
    </string-array>
    <string-array name="sucursales">
        <item>Metro Centro</item>
        <item>Multiplaza</item>
        <item>San Miguel</item>
        <item>Metro Sur</item>
        <item>La Gran Via</item>
        <item>Mall</item>
        <item>Las Cascadas</item>
        <item>Otros</item>
    </string-array>
    <string-array name="titulos">
        <item>Mision Imposible</item>
        <item>Robocot 3</item>
        <item>Treasures mdee</item>
        <item>Magic Carpet – PS1</item>
        <item>Skeleton Warriors – PS1</item>
        <item>FIFA 2004 – PS1</item>
        <item>Superman: The New Adventures–PS1</item>
        <item>PCFUTBOL – PC</item>
        <item>Zodiac Saints – PC</item>

    </string-array>
    <string-array name="comentarios">
        <item>La pelicula es genial pero por lo visto para video juegos se quedaron muy cortos. Imposible jugar por aburrimiento</item>
        <item>Poca diversion y mucho texto se lee mas que jugar</item>
        <item>Nose entiende de que se trata el video juego en realidad no deberia de existir</item>
        <item>Aburrimiento total. mi recomendacion es que no lo compren y no lo jueguen </item>
        <item>Pues no esta mal pero realmente no esta bien.</item>
        <item>Es una de las peores versiones de fifa ya que tiene muchos bugs</item>
        <item>El hombre mas fuerte del mundo pasa a ser el mas aburrido de todos pero bien cada quien sabra si le gusta o no</item>
        <item>La peor version. ya que tiene muchos bugs y lo unico que hace es quedar en pausa y no se juega nada</item>
        <item>Uno de los mejores animes del mundo pero esa version del juego no tanto. lo recomendado es busquen otras versiones</item>

    </string-array>
</resources>
