<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/categorias"
            android:title="@string/categorias" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/game"
            android:title="@string/videojuegos" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/start"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/ventas"
            android:icon="@drawable/venta"
            android:title="@string/ventas" />
        <item
            android:id="@+id/peores"
            android:icon="@drawable/dislike"
            android:title="@string/peores" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/phone"
                android:title="@string/contacto" />

        </menu>
    </item>

</menu>
